src/objects/Embalagem__c.object
<CustomObject>
    <fields>
        <fullName>Pre_o__c</fullName>
        <label>Preço</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tipo_Embalagem__c</fullName>
        <label>Tipo Embalagem</label>
        <picklist>
            <picklistValues>
                <fullName>Plástico Transparente</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Polpa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filmada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_Qntde__c</fullName>
        <label>Tipo Qntde</label>
        <picklist>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Embalagem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Caixa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Embalagens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>